--- a/axiosdemo/package.json
+++ b/axiosdemo/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "components",
+  "name": "axiosdemo",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "vue": "^3.0.4"
   },
   "devDependencies": {
